<resources>
    <string name="app_name">LoginDemo</string>

    //Login
    <string name="android">android</string>
    <string name="tutorials_hub">Tutorials hub</string>
    <string name="already_a_member_login">Already a member? Login</string>

    //Register
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_hobby">Select Hobby</string>
    <string name="singing">Singing</string>
    <string name="dancing">Dancing</string>
    <string name="swimming">Swimming</string>
    <string name="traveling">Traveling</string>
    <string name="address">Address</string>

    //Login and Register
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>

    //Validation
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="email_is_note_valid">Email is not valid</string>
    <string name="password_can_not_match">Password can not match</string>
    <string name="password_should_be_strong">Password should be strong</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_hobby">Please select hobby</string>
    <string name="invalid_credential">Invalid credential</string>

</resources>
